--- a/package.json
+++ b/package.json
@@ -20,13 +20,15 @@
     "winston": "^3.8.2",
     "ajv": "^8.11.0",
     "ajv-formats": "^2.1.1",
-    "jsonwebtoken": "^9.0.2"
+    "jsonwebtoken": "^9.0.2",
+    "bcrypt": "5.1.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.14",
     "@types/mz": "^2.7.4",
     "@types/node": "^18.11.9",
     "@types/jsonwebtoken": "^9.0.6",
+    "@types/bcrypt": "5.0.2",
     "tslint": "^6.1.3",
     "typescript": "^4.8.4"
   }
