--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "ajv": "^8.11.0",
     "ajv-formats": "^2.1.1",
     "jsonwebtoken": "^9.0.2",
-    "bcrypt": "5.1.1"
+    "bcrypt": "5.1.1",
+    "mime-types": "^2.1.35"
   },
   "devDependencies": {
     "@types/express": "^4.17.14",
@@ -29,6 +30,7 @@
     "@types/node": "^18.11.9",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/bcrypt": "5.0.2",
+    "@types/mime-types": "^2.1.4",
     "tslint": "^6.1.3",
     "typescript": "^4.8.4"
   }
